// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Places when limit is negative should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "take must not be less than 0",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": -1,
      },
      "value": -1,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when limit is not a number should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "max": "take must not be greater than 50",
        "min": "take must not be less than 0",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": null,
      },
      "value": null,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when limit is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "1187 Weskut Ridge",
      "id": "d3973942-133b-55e4-920e-7b0033ab9d38",
      "rating": 3.75,
      "title": "The Noodle Farmer",
    },
    Object {
      "address": "375 Uciwa Loop",
      "id": "55b62c9d-d3f6-5973-80cc-ca2744b0c1a6",
      "rating": 3.42,
      "title": "The Honor Goat",
    },
  ],
  "total": 20,
}
`;

exports[`List Places when limit is too large should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "max": "take must not be greater than 50",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": 9000,
      },
      "value": 9000,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when offset is negative should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "skip must not be less than 0",
      },
      "property": "skip",
      "target": Object {
        "skip": -1,
        "take": 10,
      },
      "value": -1,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when offset is not a number should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "skip must not be less than 0",
      },
      "property": "skip",
      "target": Object {
        "skip": null,
        "take": 10,
      },
      "value": null,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when offset is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "1253 Pusi Road",
      "id": "381424b3-ba66-5444-8d7a-a452071dc3b3",
      "rating": 1.29,
      "title": "The Bitter Window",
    },
    Object {
      "address": "1528 Aceer Way",
      "id": "36241277-6054-5955-a823-6a0706710235",
      "rating": 3.85,
      "title": "The Fire Grove",
    },
    Object {
      "address": "826 Cuzmav Ridge",
      "id": "f2ff6a02-8f86-51f7-bd0e-50099e450c27",
      "rating": 0.56,
      "title": "Shambles",
    },
    Object {
      "address": "1467 Huzwas Highway",
      "id": "8242a55b-5a9d-5ca9-b296-eed08dcf2897",
      "rating": 3.57,
      "title": "Amigos",
    },
    Object {
      "address": "1915 Uzma Court",
      "id": "6bf9374f-8abc-5942-b52e-fff076137298",
      "rating": 4.61,
      "title": "Little China",
    },
    Object {
      "address": "1117 Nekli Glen",
      "id": "d1c878c1-1474-5c83-b289-508f75b89a4f",
      "rating": 3.03,
      "title": "Cartwright Inc",
    },
    Object {
      "address": "1006 Laet Manor",
      "id": "dc1884c7-35da-5973-9893-f902839ff6ff",
      "rating": 3.35,
      "title": "The Locket",
    },
    Object {
      "address": "1483 Sezsac Heights",
      "id": "ea7ace38-298a-556b-8395-48d49fd33c0d",
      "rating": 1.5,
      "title": "The Japanese Fence",
    },
    Object {
      "address": "1485 Lihom Boulevard",
      "id": "4416102f-3ff0-567f-adb8-bf3a5c353d9f",
      "rating": 1.44,
      "title": "The Bitter Window",
    },
    Object {
      "address": "1754 Lija Boulevard",
      "id": "d25bd8aa-ce6d-5936-8344-c767980bdac4",
      "rating": 2.04,
      "title": "The Fable Street",
    },
  ],
  "total": 20,
}
`;

exports[`List Places when rating is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "85 Huvzu Terrace",
      "id": "cf34d948-1260-58e3-ad82-1d4335016dc0",
      "rating": 2.54,
      "title": "Trinity",
    },
    Object {
      "address": "1117 Nekli Glen",
      "id": "d1c878c1-1474-5c83-b289-508f75b89a4f",
      "rating": 3.03,
      "title": "Cartwright Inc",
    },
    Object {
      "address": "332 Ruvow Path",
      "id": "821ea0ca-77af-5dd5-a15f-176fd4ce23a2",
      "rating": 3.12,
      "title": "The Dairy Laguna",
    },
    Object {
      "address": "1006 Laet Manor",
      "id": "dc1884c7-35da-5973-9893-f902839ff6ff",
      "rating": 3.35,
      "title": "The Locket",
    },
    Object {
      "address": "375 Uciwa Loop",
      "id": "55b62c9d-d3f6-5973-80cc-ca2744b0c1a6",
      "rating": 3.42,
      "title": "The Honor Goat",
    },
  ],
  "total": 5,
}
`;

exports[`List Places without any criteria should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "1187 Weskut Ridge",
      "id": "d3973942-133b-55e4-920e-7b0033ab9d38",
      "rating": 3.75,
      "title": "The Noodle Farmer",
    },
    Object {
      "address": "375 Uciwa Loop",
      "id": "55b62c9d-d3f6-5973-80cc-ca2744b0c1a6",
      "rating": 3.42,
      "title": "The Honor Goat",
    },
    Object {
      "address": "332 Ruvow Path",
      "id": "821ea0ca-77af-5dd5-a15f-176fd4ce23a2",
      "rating": 3.12,
      "title": "The Dairy Laguna",
    },
    Object {
      "address": "1253 Pusi Road",
      "id": "381424b3-ba66-5444-8d7a-a452071dc3b3",
      "rating": 1.29,
      "title": "The Bitter Window",
    },
    Object {
      "address": "1528 Aceer Way",
      "id": "36241277-6054-5955-a823-6a0706710235",
      "rating": 3.85,
      "title": "The Fire Grove",
    },
    Object {
      "address": "826 Cuzmav Ridge",
      "id": "f2ff6a02-8f86-51f7-bd0e-50099e450c27",
      "rating": 0.56,
      "title": "Shambles",
    },
    Object {
      "address": "1467 Huzwas Highway",
      "id": "8242a55b-5a9d-5ca9-b296-eed08dcf2897",
      "rating": 3.57,
      "title": "Amigos",
    },
    Object {
      "address": "1915 Uzma Court",
      "id": "6bf9374f-8abc-5942-b52e-fff076137298",
      "rating": 4.61,
      "title": "Little China",
    },
    Object {
      "address": "1117 Nekli Glen",
      "id": "d1c878c1-1474-5c83-b289-508f75b89a4f",
      "rating": 3.03,
      "title": "Cartwright Inc",
    },
    Object {
      "address": "1006 Laet Manor",
      "id": "dc1884c7-35da-5973-9893-f902839ff6ff",
      "rating": 3.35,
      "title": "The Locket",
    },
  ],
  "total": 20,
}
`;
